--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport"
-              content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet"
-              href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-              integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-              crossorigin="anonymous">
-        <title>Home Automator</title>
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8  offset-lg-2">
-                    <h3 class="mt-5">Home Automator</h3>
-                    <img src="{{ url_for('video_feed') }}" width="100%">
-                </div>
-            </div>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <title>Home Automator</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 offset-lg-2">
+          <center><h3 class="mt-5">Home Automator</h3></center>
+          <img src="{{ url_for('video_feed') }}" width="100%" />
         </div>
-    </body>
+      </div>
+      <div class="row">
+        <center>
+            <table class="table">
+                <tbody>
+                  <tr>
+                    <th scope="row">Cuda Available</th>
+                    <td>{{cuda}}</td>
+                  </tr>
+                </tbody>
+              </table>
+        </center>
+      </div>
+    </div>
+  </body>
 </html>
